attribute-output/attributes.tf
provider "aws" {
  region     = "us-east-1"
  
}
/*
resource "aws_eip" "lb" {
  vpc = true
}

output "eip" {
  value = aws_eip.lb.public_ip
}

resource "aws_s3_bucket" "mys3" {
  bucket = "attribute-output-test-0728"
}

output "mys3bucket" {
  value = aws_s3_bucket.mys3.bucket_domain_name
}
*/
##EIP allocation
/*
resource "aws_eip" "lb" {
  vpc = true
}

output "eip" {
  value = aws_eip.lb.public_ip
}

resource "aws_instance" "myec2" {
  ami = "ami-0cff7528ff583bf9a"
  instance_type = "t2.micro"
}

resource "aws_eip_association" "eip_assoc" {
  instance_id   = aws_instance.myec2.id
  allocation_id = aws_eip.lb.id
}

resource "aws_security_group" "eipsggroup" {
  name        = "eipaccess"

  ingress {
    description      = "TLS from VPC"
    from_port        = 443
    to_port          = 443
    protocol         = "tcp"
    cidr_blocks      = ["${aws_eip.lb.public_ip}/32"]
    #cidr_blocks      = [aws_eip.lb.public_ip/32]

  }
}
*/
